# rwkv-mobile

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md
.github/workflows/: build.yml
assets/: b_rwkv_vocab_v20230424_tts.txt  rwkv_vocab_v20230424_sparktts.txt  rwkv_vocab_v20230424_tts.txt
backends/llama_cpp/: llama_cpp_backend.cpp  llama_cpp_backend.h
backends/ncnn/: ncnn_rwkv_backend.cpp  ncnn_rwkv_backend.h
backends/ncnn/src/: ncnn_rwkv_backend.cpp
backends/qnn/: qnn_backend.cpp  qnn_backend.h
backends/qnn/rwkv-qualcomm/: Interfaces.hpp
backends/qnn/rwkv-qualcomm/Utils/: ClientBuffer.cpp  ClientBuffer.hpp  DataUtil.cpp  DmaBufAllocator.cpp  DmaBufAllocator.hpp  DynamicLoadUtil.cpp  IOTensor.cpp  IOTensor.hpp  RpcMem.cpp  Utils.cpp  Utils.hpp
backends/web_rwkv/: web_rwkv_backend.cpp  web_rwkv_backend.h  web_rwkv_ffi.h
cmake/: disable_unused_ncnn_layers.cmake
converter/: convert_rwkv_jellyfish_to_ncnn.py  convert_rwkv_pth_to_gguf.py  convert_rwkv_to_coreml.py  convert_rwkv_to_ncnn.py  convert_rwkv_to_onnx.py  convert_whisper_adapter_to_ncnn.py  ncnn_model_utils.py  test.py  test_rwkv_coreml.py  test_stateful.py
converter/rwkv_src/: model_utils.py  rwkv_modeling.py  rwkv_v6_modules.py  rwkv_v7_modules.py
examples/: CMakeLists.txt  gen.cpp  simple_benchmark.cpp  test_chat.cpp  test_chat_c_api.cpp  test_chat_resume.cpp  test_clear_states.cpp  test_embedding.cpp  test_model_reloading.cpp  test_othello.cpp  test_sudoku.cpp  test_tts.cpp  test_vision_encoder.cpp  test_vision_encoder_with_adapter.cpp  test_whisper_encoder.cpp
examples/flutter/ffigen/: rwkv_mobile.dart
src/: backend.h  c_api.cpp  c_api.h  commondef.h  logger.cpp  logger.h  runtime.cpp  runtime.h  sampler.cpp  sampler.h  soc_detect.cpp  soc_detect.h  tokenizer.cpp  tokenizer.h  trie.hpp
src/backends/coreml/: coreml_rwkv_backend.cpp  coreml_rwkv_backend.h  rwkv-coreml-impl.h  rwkv-coreml-impl.m  rwkv-coreml-stateful-impl.h  rwkv-coreml-stateful-impl.m  rwkv-coreml.h  rwkv-coreml.mm
src/backends/llama_cpp/: llama_cpp_backend.cpp  llama_cpp_backend.h
src/backends/mnn/: mnn_rwkv_backend.cpp  mnn_rwkv_backend.h
src/backends/ncnn/: ncnn_rwkv_backend.cpp  ncnn_rwkv_backend.h
src/backends/qnn/: qnn_backend.cpp  qnn_backend.h
src/backends/qnn/rwkv-qualcomm/PAL/src/windows/: Directory.cpp  FileOp.cpp  Path.cpp
src/backends/qnn/rwkv-qualcomm/QNN/: QnnCommon.h  QnnContext.h  QnnInterface.h  QnnOpDef.h  QnnProperty.h  QnnSdkBuildId.h
src/backends/qnn/rwkv-qualcomm/QNN/HTP/: QnnHtpCommon.h  QnnHtpContext.h  QnnHtpDevice.h
src/backends/qnn/rwkv-qualcomm/QNN/HTP/core/: deserializer.h  graph_status.h  hexagon_nn_types.h  log.h  pickle_header_tags.h
src/backends/qnn/rwkv-qualcomm/Utils/: DynamicLoadUtil.cpp  IOTensor.cpp  RpcMem.cpp
src/backends/web_rwkv/: web_rwkv_backend.cpp  web_rwkv_backend.h
src/embedding/: rwkv_embedding.cpp  rwkv_embedding.h
src/multimodal/tts/: cosyvoice.cpp  cosyvoice.h  frontend.cpp  frontend.h  frontend_utils.cpp  frontend_utils.h  sparktts.cpp  sparktts.h
src/multimodal/utils/: audio.cpp  audio.h  librosa.h
src/multimodal/vision/: clip.cpp  clip.h  llava.cpp
src/multimodal/whisper/: whisper.cpp
